# mas_capnproto_schemas

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  capnp_compile.py  capnp_compile_all_c++.sh  capnp_compile_common.sh  capnp_compile_config.json  capnp_compile_fbp.sh  capnp_compile_mgmt.sh  mas_capnproto_schemas.slnx  pyproject.toml
.github/workflows/: recompile-schemas.yaml  release.yaml
capnp-stubs/: README.md  _internal.pyi  pyproject.toml
capnp-stubs/capnp/: __init__.py  __init__.pyi
capnp-stubs/capnp-stubs/: __init__.pyi
capnp-stubs/lib/: capnp.pyi
src/zalfmas_capnp_schemas_with_stubs/: climate_capnp.py  climate_capnp.pyi  cluster_admin_service_capnp.py  cluster_admin_service_capnp.pyi  common_capnp.py  common_capnp.pyi  config_capnp.py  config_capnp.pyi  crop_capnp.py  crop_capnp.pyi  date_capnp.py  date_capnp.pyi  fbp_capnp.py  fbp_capnp.pyi  field_exp_data_capnp.py  field_exp_data_capnp.pyi  frontend_capnp.py  geo_capnp.py  geo_capnp.pyi  grid_capnp.py  grid_capnp.pyi  jobs_capnp.py  jobs_capnp.pyi  management_capnp.py  management_capnp.pyi  model_capnp.py  model_capnp.pyi  persistence_capnp.py  persistence_capnp.pyi  registry_capnp.py  registry_capnp.pyi  service_capnp.py  service_capnp.pyi  soil_capnp.py  soil_capnp.pyi  storage_capnp.py  storage_capnp.pyi
src/zalfmas_capnp_schemas_with_stubs/capnp/: c++_capnp.py  c++_capnp.pyi  go_capnp.py  go_capnp.pyi  java_capnp.py  persistent_capnp.py  persistent_capnp.pyi
zalfmas_capnp_schemas/: __init__.py  a.capnp  climate.capnp  climate_data_old.capnp  cluster_admin_service.capnp  common.capnp  config.capnp  crop.capnp  date.capnp  fbp.capnp  field_exp_data.capnp  frontend.capnp  geo.capnp  grid.capnp  jobs.capnp  management.capnp  model.capnp  persistence.capnp  registry.capnp  service.capnp  soil.capnp  storage.capnp  vr.capnp
zalfmas_capnp_schemas/capnp/: __init__.py  persistent.capnp  python.capnp
zalfmas_capnp_schemas/climate/: climate.capnp
zalfmas_capnp_schemas/cluster/: cluster_admin_service.capnp
zalfmas_capnp_schemas/common/: common.capnp  date.capnp
zalfmas_capnp_schemas/config/: config.capnp
zalfmas_capnp_schemas/crop/: crop.capnp
zalfmas_capnp_schemas/dakis/: modam.capnp
zalfmas_capnp_schemas/data/: field_exp_data.capnp
zalfmas_capnp_schemas/fbp/: fbp.capnp
zalfmas_capnp_schemas/frontend/: frontend.capnp
zalfmas_capnp_schemas/geo/: geo.capnp
zalfmas_capnp_schemas/grid/: grid.capnp
zalfmas_capnp_schemas/jobs/: jobs.capnp
zalfmas_capnp_schemas/management/: management.capnp
zalfmas_capnp_schemas/model/: __init__.py  model.capnp
zalfmas_capnp_schemas/model/agmip/: agmip.capnp
zalfmas_capnp_schemas/model/monica/: __init__.py  monica_management.capnp  monica_params.capnp  monica_state.capnp  sim_setup.capnp  soil_params.capnp
zalfmas_capnp_schemas/model/weberest/: __init__.py  web-berest-data-import.capnp  web_berest_data_import.capnp
zalfmas_capnp_schemas/model/yieldstat/: __init__.py  yieldstat.capnp
zalfmas_capnp_schemas/persistence/: persistence.capnp
zalfmas_capnp_schemas/registry/: registry.capnp
zalfmas_capnp_schemas/rpc/: climate_data_old.capnp
zalfmas_capnp_schemas/service/: service.capnp
zalfmas_capnp_schemas/soil/: soil.capnp
zalfmas_capnp_schemas/storage/: storage.capnp
zalfmas_capnp_schemas/test/: a.capnp  x.capnp
zalfmas_capnp_schemas/vr/: vr.capnp
zalfmas_capnp_schemas_with_stubs/: __init__.py  climate_capnp.py  climate_capnp.pyi  cluster_admin_service_capnp.py  cluster_admin_service_capnp.pyi  common_capnp.py  common_capnp.pyi  config_capnp.py  config_capnp.pyi  crop_capnp.py  crop_capnp.pyi  date_capnp.py  date_capnp.pyi  fbp_capnp.py  fbp_capnp.pyi  field_exp_data_capnp.py  field_exp_data_capnp.pyi  frontend_capnp.py  frontend_capnp.pyi  geo_capnp.py  geo_capnp.pyi  grid_capnp.py  grid_capnp.pyi  jobs_capnp.py  jobs_capnp.pyi  management_capnp.py  management_capnp.pyi  model_capnp.py  model_capnp.pyi  persistence_capnp.py  persistence_capnp.pyi  registry_capnp.py  registry_capnp.pyi  service_capnp.py  service_capnp.pyi  soil_capnp.py  soil_capnp.pyi  storage_capnp.py  storage_capnp.pyi  x_capnp.py  (+1 more)
zalfmas_capnp_schemas_with_stubs/capnp/: c++_capnp.py  c++_capnp.pyi  go_capnp.py  go_capnp.pyi  java_capnp.py  java_capnp.pyi  persistent_capnp.py  persistent_capnp.pyi
zalfmas_capnp_schemas_with_stubs/model/monica/: monica_management_capnp.py  monica_management_capnp.pyi  monica_params_capnp.py  monica_params_capnp.pyi  monica_state_capnp.py  monica_state_capnp.pyi  sim_setup_capnp.py  (+3 more)
(+20 files in other folders)
