[project]
name = "zalfmas-capnp-schemas"
version = "0.1.45"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de" }]
dependencies = ["pycapnp >=2.2.1,<3.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "capnp-stubs" },
  { include = "zalfmas_capnp_schemas" },
  { include = "zalfmas_capnp_schemas_with_stubs" },
]

[tool.ruff]
target-version = "py313"
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
