[project]
name = "zalfmas-capnp-schemas"
version = "0.1.48"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Michael Berg-Mohnicke", email = "michael.berg@zalf.de" }]
dependencies = ["pycapnp >=2.2.1,<3.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "mas", from = "gen/python" },
  { include = "capnp-stubs", from = "gen/python" },
  { include = "zalfmas_capnp_schemas_with_stubs", from = "gen/python" },
  { include = "schema_capnp", from = "gen/python" },
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.10,<0.0.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[tool.ruff]
target-version = "py313"
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
