[tool.poetry]
name = "capnp-stubs"
version = "0.1.0"
description = "Type stubs for pycapnp"
readme = "README.md"
authors = ["capnp-stub-generator contributors"]
license = "MIT"
packages = [{include = "capnp"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
